Fix main heading on mobile

--- a/css/navigation_bar.css
+++ b/css/navigation_bar.css
@@ -5,9 +5,15 @@
 }
 
 h1 {
-    font-family: 'Philosopher', sans-serif;
+    font-family: "Philosopher", sans-serif;
     font-size: 3.4rem;
     color: rgb(90, 90, 90);
+}
+
+@media (max-width: 566px) {
+    h1 {
+        font-size: 2.5rem;
+    }
 }
 
 .nav-item {
